@@ -397,7 +397,7 @@ gp_malloc(size_t Size, const char *File, size_t Line, const char *Func)
   }
 
   if ((m = malloc(Size)) == NULL) {
-    fprintf(stderr, "%s() -- Could not allocate %lu bytes of memory. {%s.LINE-%lu, %s()}\n",
+    fprintf(stderr, "%s() -- Could not allocate %"PRIu64" bytes of memory. {%s.LINE-%"PRIu64", %s()}\n",
             __func__, Size, File, Line, Func);
     exit(1);
   }
@@ -417,7 +417,7 @@ gp_calloc(size_t Nmemb, size_t Size, const char *File, size_t Line, const char *
   }
 
   if ((m = calloc(Nmemb, Size)) == NULL) {
-    fprintf(stderr, "%s() -- Could not allocate %lu bytes of memory. {%s.LINE-%lu, %s()}\n",
+    fprintf(stderr, "%s() -- Could not allocate %"PRIu64" bytes of memory. {%s.LINE-%"PRIu64", %s()}\n",
             __func__, Nmemb * Size, File, Line, Func);
     exit(1);
   }
@@ -438,7 +438,7 @@ gp_realloc(void *Mem, size_t Size, const char *File, size_t Line, const char *Fu
   }
 
   if ((m = realloc(Mem, Size)) == NULL) {
-    fprintf(stderr, "%s() -- Could not reallocate %lu bytes of memory. {%s.LINE-%lu, %s()}\n",
+    fprintf(stderr, "%s() -- Could not reallocate %"PRIu64" bytes of memory. {%s.LINE-%"PRIu64", %s()}\n",
             __func__, Size, File, Line, Func);
     exit(1);
   }
@@ -456,7 +456,7 @@ gp_strdup(const char *String, const char *File, size_t Line, const char *Func)
   assert(String != NULL);
 
   if ((s = strdup(String)) == NULL) {
-    fprintf(stderr, "%s(\"%s\") -- Could not allocate string {%s.LINE-%lu, %s()}, error: %s.\n",
+    fprintf(stderr, "%s(\"%s\") -- Could not allocate string {%s.LINE-%"PRIu64", %s()}, error: %s.\n",
             __func__, String, File, Line, Func, strerror(errno));
     exit(1);
   }
@@ -474,7 +474,7 @@ gp_strndup(const char *String, size_t Length, const char *File, size_t Line, con
   assert(String != NULL);
 
   if ((s = strndup(String, Length)) == NULL) {
-    fprintf(stderr, "%s(\"%s\", %lu) -- Could not allocate string {%s.LINE-%lu, %s()}, error: %s.\n",
+    fprintf(stderr, "%s(\"%s\", %"PRIu64") -- Could not allocate string {%s.LINE-%"PRIu64", %s()}, error: %s.\n",
             __func__, String, Length, File, Line, Func, strerror(errno));
     exit(1);
   }
