@@ -1,3 +1,7 @@
+2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * include/stdhdr.h, libgputils/gparchive.c, libgputils/gpsystem.c:
+    Fixed some compiler warnings.
+
 2016-08-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * configure, configure.ac:
     Fixed a Darwin bug.
